# FairShip

./: .clang-format  .clang-tidy  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  .travis.yml  ACTSReco_8py.html  ACTSReco_8py.js  ACTSReco_8py_source.html  ALPACAGenerator_8cxx.html  ALPACAGenerator_8cxx.js  ALPACAGenerator_8cxx__incl.map  ALPACAGenerator_8cxx__incl.md5  ALPACAGenerator_8cxx_source.html  ALPACAGenerator_8h.html  ALPACAGenerator_8h__dep__incl.map  ALPACAGenerator_8h__dep__incl.md5  ALPACAGenerator_8h__incl.map  ALPACAGenerator_8h__incl.md5  ALPACAGenerator_8h_source.html  AddDiMuonDecayChannelsToG4_8py.html  AddDiMuonDecayChannelsToG4_8py.js  AddDiMuonDecayChannelsToG4_8py_source.html  BSD-3-Clause_8txt.html  BaseDetector_8py.html  BaseDetector_8py.js  BaseDetector_8py_source.html  BeamSmearingUtils_8cxx.html  BeamSmearingUtils_8cxx.js  BeamSmearingUtils_8cxx__incl.map  BeamSmearingUtils_8cxx__incl.md5  BeamSmearingUtils_8cxx_source.html  BeamSmearingUtils_8h.html  BeamSmearingUtils_8h.js  BeamSmearingUtils_8h__dep__incl.map  BeamSmearingUtils_8h__dep__incl.md5  (+4978 more)
.github/: pull.yml  pull_request_template.md
Detector/: CMakeLists.txt  Detector.cxx  Detector.h  DetectorHit.cxx  DetectorHit.h  DetectorPoint.cxx  DetectorPoint.h  LinkDef.h
HCAL/: CMakeLists.txt  HCAL.cxx  HCAL.h  HCALContFact.cxx  HCALContFact.h  HCALPoint.cxx  HCALPoint.h  LinkDef.h
HeineBOB/: my_file.txt
TauSensitive/: CMakeLists.txt  ShipRpc.cxx  ShipRpc.h  ShipRpcPoint.cxx  ShipRpcPoint.h  ShipTauSensitiveContFact.cxx  ShipTauSensitiveContFact.h  ShipUnit.h  TauSensitiveLinkDef.h
TimeDet/: CMakeLists.txt  LinkDef.h  TimeDet.cxx  TimeDet.h  TimeDetHit.cxx  TimeDetHit.h  TimeDetLinkDef.h  TimeDetPoint.cxx  TimeDetPoint.h
UpstreamTagger/: CMakeLists.txt  LinkDef.h  UpstreamTagger.cxx  UpstreamTagger.cxx~  UpstreamTagger.h  UpstreamTagger.h~  UpstreamTaggerHit.cxx  UpstreamTaggerHit.cxx~  UpstreamTaggerHit.h  UpstreamTaggerHit.h~  UpstreamTaggerLinkDef.h  UpstreamTaggerPoint.cxx  UpstreamTaggerPoint.h
VetoTiming/: lookAtGeo.py  ntuple_nuVeto.py  nuVeto.py  run_simScript.py  understandNtuple.py
cassandra/: myCassTest.py
charmdet/: Box.cxx  Box.h  BoxContFact.cxx  BoxContFact.h  BoxLinkDef.h  BoxPoint.cxx  BoxPoint.h  CMakeLists.txt  CharmdetAnalysis.py  CharmdetHitPositions.py  MillepedeCaller.cxx  MillepedeCaller.h  MufluxNtuple.py  MufluxReco.cxx  MufluxReco.h  MufluxSpectrometer.cxx  MufluxSpectrometer.h  MufluxSpectrometerHit.cxx  MufluxSpectrometerHit.h  MufluxSpectrometerPoint.cxx  MufluxSpectrometerPoint.h  MuonTagger.cxx  MuonTagger.h  MuonTaggerHit.cxx  MuonTaggerHit.h  MuonTaggerPoint.cxx  MuonTaggerPoint.h  PixelHit.cxx  PixelHit.h  PixelModules.cxx  PixelModules.h  PixelModulesPoint.cxx  PixelModulesPoint.h  README.md  RPCTrack.cxx  RPCTrack.h  ReProcessAbsorber.cxx  ReProcessAbsorber.h  ResolutionStudy.py  SciFi.cxx  (+27 more)
cmake/: genfit2.rootmap  test_pythia_version.cpp
conditionsDatabase/: Dockerfile  Doxyfile  README.md  api_interface.py  config.yml  factory.py  getconditions_condDB.py  interface.py  list_conDB.py  requirements.txt  scifi_conDB.py  snd_conDB.py  start_mongodb_locally.sh
diag/: Vagrantfile
doxygen/: Doxyfile  titlepage.md
ecal/: CMakeLists.txt  LinkDef.h  ecal.cxx  ecal.h  ecalAnalysisMaterial.cxx  ecalAnalysisMaterial.h  ecalAnalysisSimple.cxx  ecalAnalysisSimple.h  ecalCell.cxx  ecalCell.h  ecalCellMC.cxx  ecalCellMC.h  ecalCluster.cxx  ecalCluster.h  ecalClusterCalibration.cxx  ecalClusterCalibration.h  ecalClusterFinder.cxx  ecalClusterFinder.h  ecalContFact.cxx  ecalContFact.h  ecalDigi.cxx  ecalDigi.h  ecalDrawer.cxx  ecalDrawer.h  ecalInf.cxx  ecalInf.h  ecalLightMap.cxx  ecalLightMap.h  ecalLinkDef.h  ecalMatch.cxx  ecalMatch.h  ecalMaximum.cxx  ecalMaximum.h  ecalMaximumLocator.cxx  ecalMaximumLocator.h  ecalModule.cxx  ecalModule.h  ecalPoint.cxx  ecalPoint.h  ecalPreCluster.h  (+10 more)
examples/: analysis_example.py
field/: BFieldSetup.txt  CMakeLists.txt  ExampleBFieldSetup.txt  FieldLinkDef.h  (+31 more)
muonShieldOptimization/: CMakeLists.txt  LinkDef.h  ScoringPlane.cxx  ScoringPlane.h  ana_ShipMuon.py  analyze:miniShip.py  compactingBackgroundProduction.py  exitHadronAbsorber.cxx  exitHadronAbsorber.h  extractMuonsAndUpdateWeight.py  extractNeutrinosAndUpdateWeight.py  g4Ex.py  g4Ex_args.py  g4Ex_gap.py  g4Ex_gap_mergeFiles.py  g4Ex_gap_mergeMbias.py  makeMuonDIS.py  makeMuonEM.py  miniShip.cxx  miniShip.h  miniShip.py  muDIS_mergeFiles.py  muonShieldBackgroundLinkDef.h  pyFairModule.cxx  pyFairModule.h  radio.py  runCharmHadProd.py  run_MufluxfixedTarget.py  run_fixedTarget.py  run_fixedTarget_charmdet.py  run_prod.py  run_reco.py  simpleTarget.cxx  simpleTarget.h  study_GammaConv.py  study_muEloss.py  study_muMSC.py  study_thinTarget.py  submitG4prod.py  submitPyG4prod.py
shipdata/: CMakeLists.txt  Hit2MCPoints.cxx  Hit2MCPoints.h  ISTLPointContainer.h  LinkDef.h  MCStackLinkDef.h  ShipDetectorList.h  ShipGeoUtil.h  ShipGlobals.h  ShipHit.cxx  ShipHit.h  ShipMCTrack.cxx  ShipMCTrack.h  ShipParticle.cxx  ShipParticle.h  ShipStack.cxx  ShipStack.h  ShipUnit.h  SndlhcHit.cxx  SndlhcHit.h  TrackInfo.cxx  TrackInfo.h  VMCConfig.cxx  VMCConfig.h  VectorMCPointSource.h  rename.sh
tests/: CMakeLists.txt  README.md  __init__.py  test_data_class_io.cxx  test_online.cpp  test_rntuple_io.cxx
tests/data/: muonback_smoke.root  skim_muonback_smoke.py
tests/fairship_tests/: README.md  __init__.py  harness.py  regenerate_references.sh  skip_patterns.conf  test_cases.yaml
tests/fairship_tests/references/: ci-sim.txt  evtgen-summary.txt  muonback-io.txt  muonback-summary.txt  particle-gun.txt  pythia8-summary.txt  reconstruction.txt  tracking-benchmark.txt
tests/fairship_tests/scripts/: ci-sim.sh  evtgen-summary.sh  muonback-io.sh  muonback-summary.sh  particle-gun.sh  pythia8-summary.sh  reconstruction.sh  tracking-benchmark.sh
tests/simulation/: README.md  __init__.py  run_tests.py  test_generator_configurator.py  test_refactored_integration.py  test_simulation_execution_configurator.py
(+2071 files in other folders)
